# GenShelfV3_iOS

./: .gitmodules  README.md
GenS/: AppDelegate.h  AppDelegate.mm  Info.plist  main.m
GenS.xcodeproj/: project.pbxproj
GenS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GenS/Common/: GlobalsDefine.h  load_classes.cpp
GenS/Common/Models/: Book.h
GenS/Controllers/: GSBookInfoViewController.h  GSBookInfoViewController.mm  GSHomeController.h  GSHomeController.mm  GSLibraryViewController.h  GSLibraryViewController.mm  GSLocalBookInfoViewController.h  GSLocalBookInfoViewController.mm  GSProcessViewController.h  GSProcessViewController.mm  GSReadViewController.h  GSReadViewController.mm  GSSearchViewController.h  GSSearchViewController.mm  GSSettingViewController.h  GSSettingViewController.mm  GSShelfViewController.mm  GSShelfsViewController.h  GSShelfsViewController.mm  GSShopInfoViewController.h  GSShopInfoViewController.mm  GSWebViewController.h  GSWebViewController.mm
GenS/Utils/: GSAnalysis.h  GSAnalysis.m  GSMemCache.h  GSMemCache.m  GSUtils.hpp  GSUtils.mm
GenS/en.lproj/: Localizable.strings
GenS/hirender/: CMakeLists.txt
GenS/hirender/script/objc/: HiObject.h  ObjcClass.h  ObjcInstance.h  ObjcNativeObject.h  ObjcScript.h  ObjcUtils.h
GenS/hirender/script/objc/Classes/: HECallback.h  HEController.h  HEImageTexture.h  HEImageView.h  HENavigationController.h  HEObject.h  HERenderer.h  HEScriptTransport.h  HETexture.h  HEView.h  HEiOSPlatform.h
GenS/hirender/utils/json/_internal/Source/: JSONNode.cpp  internalJSONNode.cpp  libjson.cpp
(+75 files in other folders)
